--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  font-family: 'Poppins', sans-serif;
+   font-family: 'Roboto', sans-serif;
+}
 /* our package section style  */
 .package{
 background-color:#FEF5FA;
